<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/rutgers"
                android:id="@+id/imageView" tools:ignore="ContentDescription"/>
        <TextView
                android:text="@string/phone_number"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/editTextPhone" android:hint="@string/input_your_phone_number"
                android:autofillHints="@string/input_your_phone_number"/>
        <TextView
                android:text="@string/flavor"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <ImageButton
                android:layout_width="match_parent"
                android:layout_height="100dp" app:srcCompat="@drawable/deluxe" android:id="@+id/deluxe"
                tools:ignore="ContentDescription" android:onClick="onPizza"/>
        <TextView
                android:text="@string/deluxe"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView5"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <ImageButton
                android:layout_width="match_parent"
                android:layout_height="100dp" app:srcCompat="@drawable/hawaiian" android:id="@+id/hawaiian"
                tools:ignore="ContentDescription" android:onClick="onPizza"/>
        <TextView
                android:text="@string/hawaiian"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView6"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <ImageButton
                android:layout_width="match_parent"
                android:layout_height="100dp" app:srcCompat="@drawable/pepperoni"
                android:id="@+id/pepperoni" tools:ignore="ContentDescription" android:onClick="onPizza"/>
        <TextView
                android:text="@string/pepperoni"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView7"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <Button
                android:text="@string/current_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/currentOrder" android:onClick="onOrder"/>
        <Button
                android:text="@string/store_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/storeOrder" android:onClick="onOrder"/>
    </LinearLayout>
</ScrollView>