<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <ImageView
            android:layout_width="160dp"
            android:layout_height="152dp"
            android:id="@+id/pizza_p"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"/>
    <Button
            android:text="@string/Ordered"
            android:layout_width="135dp"
            android:layout_height="50dp" android:id="@+id/ordered"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/onion"
            android:onClick="onPizzaOrder"
            app:layout_constraintTop_toBottomOf="@+id/onion" app:layout_constraintEnd_toEndOf="@+id/onion"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.277"/>
    <Spinner
            android:layout_width="150dp"
            android:layout_height="35dp" android:id="@+id/size"
            app:layout_constraintStart_toEndOf="@+id/pizza_p"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="52dp" app:layout_constraintHorizontal_bias="0.564"/>
    <CheckBox
            android:text="@string/topping01"
            android:layout_width="135dp"
            android:layout_height="40dp" android:id="@+id/chicken"
            app:layout_constraintEnd_toStartOf="@+id/beef" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="45dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="220dp" android:checked="false"
            android:onClick="onCheckToppings"/>
    <CheckBox
            android:text="@string/topping02"
            android:layout_width="135dp"
            android:layout_height="40dp" android:id="@+id/beef"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="45dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="220dp" android:checked="false"
            android:onClick="onCheckToppings"/>
    <CheckBox
            android:text="@string/topping03"
            android:layout_width="135dp"
            android:layout_height="40dp" android:id="@+id/ham"
            app:layout_constraintTop_toBottomOf="@+id/chicken" app:layout_constraintStart_toStartOf="@+id/chicken"
            app:layout_constraintEnd_toEndOf="@+id/chicken" android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.0" android:checked="false" android:onClick="onCheckToppings"/>
    <CheckBox
            android:text="@string/topping04"
            android:layout_width="135dp"
            android:layout_height="40dp" android:id="@+id/pineapple"
            app:layout_constraintTop_toBottomOf="@+id/beef" app:layout_constraintStart_toStartOf="@+id/beef"
            app:layout_constraintEnd_toEndOf="@+id/beef" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="20dp" android:checked="false" android:onClick="onCheckToppings"/>
    <CheckBox
            android:text="@string/topping05"
            android:layout_width="135dp"
            android:layout_height="40dp" android:id="@+id/blackOlives"
            app:layout_constraintStart_toStartOf="@+id/ham" app:layout_constraintEnd_toEndOf="@+id/ham"
            app:layout_constraintTop_toBottomOf="@+id/ham" android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.0" android:checked="false" android:onClick="onCheckToppings"/>
    <CheckBox
            android:text="@string/topping06"
            android:layout_width="135dp"
            android:layout_height="40dp" android:id="@+id/cheese"
            app:layout_constraintStart_toStartOf="@+id/pineapple" app:layout_constraintEnd_toEndOf="@+id/pineapple"
            app:layout_constraintTop_toBottomOf="@+id/pineapple" android:layout_marginTop="20dp"
            android:checked="false" android:onClick="onCheckToppings"/>
    <CheckBox
            android:text="@string/topping07"
            android:layout_width="135dp"
            android:layout_height="40dp" android:id="@+id/sausage"
            app:layout_constraintStart_toStartOf="@+id/blackOlives" app:layout_constraintEnd_toEndOf="@+id/blackOlives"
            app:layout_constraintTop_toBottomOf="@+id/blackOlives" android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.0" android:checked="false" android:onClick="onCheckToppings"/>
    <CheckBox
            android:text="@string/topping08"
            android:layout_width="135dp"
            android:layout_height="40dp" android:id="@+id/greenPepper"
            app:layout_constraintStart_toStartOf="@+id/cheese" app:layout_constraintEnd_toEndOf="@+id/cheese"
            app:layout_constraintTop_toBottomOf="@+id/cheese" android:layout_marginTop="20dp" android:checked="false"
            android:onClick="onCheckToppings"/>
    <CheckBox
            android:text="@string/topping09"
            android:layout_width="135dp"
            android:layout_height="40dp" android:id="@+id/onion"
            app:layout_constraintTop_toBottomOf="@+id/sausage" app:layout_constraintEnd_toEndOf="@+id/sausage"
            app:layout_constraintStart_toStartOf="@+id/sausage" android:layout_marginTop="20dp"
            app:layout_constraintHorizontal_bias="0.0" android:checked="false" android:onClick="onCheckToppings"/>
    <CheckBox
            android:text="@string/topping10"
            android:layout_width="135dp"
            android:layout_height="40dp" android:id="@+id/pepOni"
            app:layout_constraintTop_toBottomOf="@+id/greenPepper"
            app:layout_constraintStart_toStartOf="@+id/greenPepper"
            app:layout_constraintEnd_toEndOf="@+id/greenPepper" android:layout_marginTop="20dp"
            android:checked="false" android:onClick="onCheckToppings"/>
    <TextView
            android:layout_width="150dp"
            android:layout_height="35dp"
            app:layout_constraintTop_toBottomOf="@+id/size"
            android:layout_marginTop="44dp" app:layout_constraintEnd_toEndOf="@+id/size"
            app:layout_constraintStart_toStartOf="@+id/size" app:layout_constraintHorizontal_bias="0.0"
            android:id="@+id/price"/>
    <TextView
            android:text="@string/check_topping"
            android:layout_width="210dp"
            android:layout_height="40dp" android:id="@+id/checkTopping"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pizza_p" app:layout_constraintBottom_toTopOf="@+id/beef"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.458"/>
    <TextView
            android:text="@string/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/pricetitle"
            app:layout_constraintTop_toBottomOf="@+id/size"
            app:layout_constraintBottom_toTopOf="@+id/price"
            app:layout_constraintEnd_toEndOf="@+id/price" android:layout_marginEnd="16dp"
            app:layout_constraintVertical_bias="0.56" app:layout_constraintStart_toStartOf="@+id/price"
            app:layout_constraintHorizontal_bias="0.598"/>
    <TextView
            android:text="@string/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/sizetitle"
            app:layout_constraintEnd_toEndOf="@+id/size" app:layout_constraintStart_toStartOf="@+id/size"
            app:layout_constraintHorizontal_bias="0.491" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/size" app:layout_constraintVertical_bias="0.606"/>
    <Button
            android:text="@string/Return"
            android:layout_width="135dp"
            android:layout_height="50dp" android:id="@+id/returned"
            app:layout_constraintEnd_toEndOf="@+id/pepOni" app:layout_constraintTop_toBottomOf="@+id/pepOni"
            app:layout_constraintStart_toStartOf="@+id/pepOni"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.277" android:onClick="onPizzaOrder"/>
</androidx.constraintlayout.widget.ConstraintLayout>