<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <TextView
            android:text="@string/Store_Order_View"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView3"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.497"/>
    <Spinner
            android:layout_width="300dp"
            android:layout_height="35dp" android:id="@+id/spinner"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginTop="12dp" app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="@+id/textView4"/>
    <TextView
            android:text="@string/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/textView3" android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <ListView
            android:layout_width="400dp"
            android:layout_height="300dp"
            app:layout_constraintTop_toBottomOf="@+id/spinner" app:layout_constraintEnd_toEndOf="@+id/spinner"
            app:layout_constraintStart_toStartOf="@+id/spinner" android:layout_marginTop="16dp"
            android:id="@+id/details"/>
    <TextView
            android:layout_width="100dp"
            android:layout_height="30dp" android:id="@+id/total"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="108dp"
            app:layout_constraintTop_toBottomOf="@+id/details" android:layout_marginTop="28dp"/>
    <TextView
            android:text="@string/current_total"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toStartOf="@+id/total"
            app:layout_constraintHorizontal_bias="0.575" android:id="@+id/total_store"
            app:layout_constraintTop_toBottomOf="@+id/details" android:layout_marginTop="28dp"/>
    <Button
            android:text="@string/cancel_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/cancel"
            app:layout_constraintTop_toBottomOf="@+id/total_store"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/return_store"
            app:layout_constraintStart_toStartOf="parent" android:onClick="onCancel"/>
    <Button
            android:text="@string/Return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/return_store"
            app:layout_constraintTop_toBottomOf="@+id/total"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="52dp" app:layout_constraintVertical_bias="0.502" android:onClick="onCancel"/>
</androidx.constraintlayout.widget.ConstraintLayout>