<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <ListView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/showPizza" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.276"/>
    <TextView
            android:text="@string/current_order"
            android:layout_width="140dp"
            android:layout_height="30dp" android:id="@+id/textView2"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@id/showPizza"
            app:layout_constraintHorizontal_bias="0.073" app:layout_constraintVertical_bias="0.467"/>
    <Button
            android:text="@string/Place_Order"
            android:layout_width="165dp"
            android:layout_height="45dp" android:id="@+id/place_order"
            app:layout_constraintTop_toBottomOf="@+id/showPizza"
            android:layout_marginTop="25dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp" app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="onPlaceOrder"/>
    <Button
            android:text="@string/Return"
            android:layout_width="163dp"
            android:layout_height="45dp" android:id="@+id/return_order"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/showPizza"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp" app:layout_constraintBottom_toBottomOf="parent"
            android:onClick="onPlaceOrder"/>
    <TextView
            android:layout_width="170dp"
            android:layout_height="30dp" android:id="@+id/show_phone"
            app:layout_constraintStart_toEndOf="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/showPizza"
            app:layout_constraintHorizontal_bias="0.227" app:layout_constraintVertical_bias="0.467"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
    <TextView
            android:layout_width="80dp"
            android:layout_height="25dp" android:id="@+id/sub_total"
            app:layout_constraintBottom_toTopOf="@+id/place_order"
            app:layout_constraintTop_toBottomOf="@+id/showPizza" app:layout_constraintEnd_toStartOf="@+id/tax"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:layout_width="80dp"
            android:layout_height="25dp" android:id="@+id/tax"
            app:layout_constraintBottom_toTopOf="@+id/place_order"
            app:layout_constraintEnd_toEndOf="@+id/return_order"
            app:layout_constraintStart_toStartOf="@+id/place_order"
            app:layout_constraintTop_toBottomOf="@+id/showPizza"/>
    <TextView
            android:layout_width="80dp"
            android:layout_height="25dp" android:id="@+id/current_total"
            app:layout_constraintBottom_toTopOf="@+id/place_order"
            app:layout_constraintTop_toBottomOf="@+id/showPizza" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tax"/>
    <TextView
            android:text="@string/sub_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/showPizza" app:layout_constraintEnd_toEndOf="@+id/sub_total"
            app:layout_constraintStart_toStartOf="@+id/sub_total" app:layout_constraintBottom_toTopOf="@+id/sub_total"
            app:layout_constraintVertical_bias="0.761"/>
    <TextView
            android:text="@string/tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView12"
            app:layout_constraintEnd_toEndOf="@+id/tax" app:layout_constraintStart_toStartOf="@+id/tax"
            app:layout_constraintTop_toBottomOf="@+id/showPizza" app:layout_constraintBottom_toTopOf="@+id/tax"
            app:layout_constraintHorizontal_bias="0.491" app:layout_constraintVertical_bias="0.761"/>
    <TextView
            android:text="@string/current_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView13"
            app:layout_constraintEnd_toEndOf="@+id/current_total"
            app:layout_constraintStart_toStartOf="@+id/current_total"
            app:layout_constraintTop_toBottomOf="@+id/showPizza"
            app:layout_constraintBottom_toTopOf="@+id/current_total" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.761"/>
</androidx.constraintlayout.widget.ConstraintLayout>